--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,9 @@ serde_yaml = "0.8"
 git2 = "0.13"
 failure = "0.1"
 chrono = "0.4"
-tempfile = "3.1"
+tempfile = "3"
 file-lock = "1.1"
-xactor = "0.7"
-async-std = { version = "1", features=["attributes", "unstable"]}
+actix = "0.10"
+actix-web = "3"
+actix-web-actors = "3"
+actix-files = "0.5.0"
